--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@angular-skyhook/monorepo",
+    "name": "@topdecked/angular-skyhook-monorepo",
     "private": true,
     "version": "0.0.0",
     "devDependencies": {
@@ -50,7 +50,7 @@
         "test": "jest",
         "test-tdd": "jest --watchAll --no-cache",
         "test-debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand",
-        "release": "yarn lerna version && yarn build && yarn lerna publish from-git",
+        "release": "yarn lerna version && yarn build && yarn lerna publish from git",
         "postinstall": "yarn build-tools",
         "lint": "tslint packages/**/*.ts -t verbose",
         "aio": "compodoc -p ./tsconfig.json --output ./aio --hideGenerator --silent"
