--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,7 @@
 {
-    "name": "@angular-skyhook/core",
-    "version": "1.3.3",
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": "https://github.com/cormacrelf/angular-skyhook",
+    "name": "@topdecked/angular-skyhook-core",
+    "version": "1.4.0",
+    "repository": "https://github.com/TopDecked/angular-skyhook",
     "dependencies": {
         "dnd-core": "^9.0.0",
         "tslib": "^1.9.0"
