--- a/packages/multi-backend/package.json
+++ b/packages/multi-backend/package.json
@@ -1,10 +1,7 @@
 {
-    "name": "@angular-skyhook/multi-backend",
-    "version": "1.3.3",
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": "https://github.com/cormacrelf/angular-skyhook",
+    "name": "@topdecked/angular-skyhook-multi-backend",
+    "version": "1.4.0",
+    "repository": "https://github.com/TopDecked/angular-skyhook",
     "dependencies": {
         "dnd-core": "^9.0.0",
         "dnd-multi-backend": "^3.2.1",
@@ -13,7 +10,7 @@
         "tslib": "^1.9.0"
     },
     "peerDependencies": {
-        "@angular-skyhook/core": "^1.0.0",
+        "@topdecked/angular-skyhook-core": "1.0.0",
         "@angular/core": ">= 6.0.0",
         "rxjs": ">= 6.0.0"
     },
@@ -24,6 +21,6 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@angular-skyhook/core": "^1.3.3"
+        "@topdecked/angular-skyhook-core": "1.4.0"
     }
 }
