--- a/packages/sortable/package.json
+++ b/packages/sortable/package.json
@@ -1,15 +1,12 @@
 {
-    "name": "@angular-skyhook/sortable",
-    "version": "1.3.3",
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": "https://github.com/cormacrelf/angular-skyhook",
+    "name": "@topdecked/angular-skyhook-sortable",
+    "version": "1.4.0",
+    "repository": "https://github.com/TopDecked/angular-skyhook",
     "dependencies": {
         "tslib": "^1.9.0"
     },
     "peerDependencies": {
-        "@angular-skyhook/core": "^1.0.0",
+        "@topdecked/angular-skyhook-core": "1.0.0",
         "@angular/common": ">= 6.0.0",
         "@angular/core": ">= 6.0.0",
         "rxjs": ">= 6.0.0"
@@ -20,6 +17,6 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@angular-skyhook/core": "^1.3.3"
+        "@topdecked/angular-skyhook-core": "1.4.0"
     }
 }
