--- a/packages/sortable/package.json
+++ b/packages/sortable/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@topdecked/angular-skyhook-sortable",
-    "version": "1.4.0",
+    "version": "1.4.1",
     "repository": "https://github.com/TopDecked/angular-skyhook",
     "dependencies": {
         "tslib": "^1.9.0"
     },
     "peerDependencies": {
-        "@topdecked/angular-skyhook-core": "1.0.0",
         "@angular/common": ">= 6.0.0",
         "@angular/core": ">= 6.0.0",
+        "@topdecked/angular-skyhook-core": "1.0.0",
         "rxjs": ">= 6.0.0"
     },
     "scripts": {
@@ -17,6 +17,6 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@topdecked/angular-skyhook-core": "1.4.0"
+        "@topdecked/angular-skyhook-core": "^1.4.1"
     }
 }
